--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <artifactId>jeap-messaging</artifactId>
     <name>${project.groupId}:${project.artifactId}</name>
-    <version>8.45.0-SNAPSHOT</version>
+    <version>8.46.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
@@ -76,6 +76,8 @@
         <maven-invoker.version>3.3.0</maven-invoker.version>
         <maven-plugin-testing-harness.version>3.3.0</maven-plugin-testing-harness.version>
         <commons-compress.version>1.27.1</commons-compress.version>
+        <commons-io.version>2.19.0</commons-io.version>
+        <commons-beanutils.version>1.11.0</commons-beanutils.version>
     </properties>
 
     <dependencyManagement>
@@ -191,6 +193,20 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-compress</artifactId>
                 <version>${commons-compress.version}</version>
+            </dependency>
+            <!-- This is needed because commons-io 2.11.0  (CVE-2024-47554) is coming with spring-kafka-test 3.3.6 -->
+            <!-- might be fixed with https://jira.bit.admin.ch/browse/JEAP-5650 -->
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
+            </dependency>
+            <!-- This is needed because commons-beanutils 1.9.4 (CVE-2025-48734) is coming with spring-kafka-test 3.3.6 -->
+            <!-- might be fixed with https://jira.bit.admin.ch/browse/JEAP-5650 -->
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${commons-beanutils.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
